--- a/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
+++ b/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using ApplicationInsightsDemo.Areas.HelpPage.ModelDescriptions
+@using DustInTheWind.ApplicationInsightsDemo.Areas.HelpPage.ModelDescriptions
 @model CollectionModelDescription
 @if (Model.ElementDescription is ComplexTypeModelDescription)
 {
