--- a/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using ApplicationInsightsDemo.Areas.HelpPage.Models
+@using DustInTheWind.ApplicationInsightsDemo.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
