--- a/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
-@using ApplicationInsightsDemo.Areas.HelpPage
-@using ApplicationInsightsDemo.Areas.HelpPage.Models
+@using DustInTheWind.ApplicationInsightsDemo.Areas.HelpPage
+@using DustInTheWind.ApplicationInsightsDemo.Areas.HelpPage.Models
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
