--- a/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
+++ b/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
@@ -1,3 +1,3 @@
-@using ApplicationInsightsDemo.Areas.HelpPage.ModelDescriptions
+@using DustInTheWind.ApplicationInsightsDemo.Areas.HelpPage.ModelDescriptions
 @model ComplexTypeModelDescription
 @Html.DisplayFor(m => m.Properties, "Parameters")
