--- a/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
+++ b/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
@@ -1,4 +1,4 @@
-@using ApplicationInsightsDemo.Areas.HelpPage
+@using DustInTheWind.ApplicationInsightsDemo.Areas.HelpPage
 @model ImageSample
 
 <img src="@Model.Src" />
