--- a/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/KeyValuePairModelDescription.cshtml
+++ b/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/KeyValuePairModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using ApplicationInsightsDemo.Areas.HelpPage.ModelDescriptions
+@using DustInTheWind.ApplicationInsightsDemo.Areas.HelpPage.ModelDescriptions
 @model KeyValuePairModelDescription
 Pair of @Html.DisplayFor(m => Model.KeyModelDescription.ModelType, "ModelDescriptionLink", new { modelDescription = Model.KeyModelDescription }) [key]
 and @Html.DisplayFor(m => Model.ValueModelDescription.ModelType, "ModelDescriptionLink", new { modelDescription = Model.ValueModelDescription }) [value]
