--- a/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/ModelDescriptionLink.cshtml
+++ b/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/ModelDescriptionLink.cshtml
@@ -1,4 +1,4 @@
-@using ApplicationInsightsDemo.Areas.HelpPage.ModelDescriptions
+@using DustInTheWind.ApplicationInsightsDemo.Areas.HelpPage.ModelDescriptions
 @model Type
 @{
     ModelDescription modelDescription = ViewBag.modelDescription;
