--- a/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
+++ b/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
@@ -2,7 +2,7 @@
 @using System.Collections.ObjectModel
 @using System.Web.Http.Description
 @using System.Threading
-@using ApplicationInsightsDemo.Areas.HelpPage.ModelDescriptions
+@using DustInTheWind.ApplicationInsightsDemo.Areas.HelpPage.ModelDescriptions
 @model IList<ParameterDescription>
 
 @if (Model.Count > 0)
