--- a/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
+++ b/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
@@ -1,4 +1,4 @@
-@using ApplicationInsightsDemo.Areas.HelpPage
+@using DustInTheWind.ApplicationInsightsDemo.Areas.HelpPage
 @model TextSample
 
 <pre class="wrapped">
