--- a/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/sources/ApplicationInsightsDemo/Areas/HelpPage/Views/Help/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using ApplicationInsightsDemo.Areas.HelpPage.Models
+@using DustInTheWind.ApplicationInsightsDemo.Areas.HelpPage.Models
 @model Collection<ApiDescription>
 
 @{
